<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@+id/welcomeFragment"
        >
    <fragment
            android:id="@+id/welcomeFragment"
            android:name="org.ciaranroche.kang.fragments.main.WelcomeFragment"
            android:label="Select Kang Genre"
            tools:layout="@layout/fragment_welcome">
        <action
                android:id="@+id/action_welcomeFragment_to_vinylProfileFragment"
                app:destination="@id/vinylProfileFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
            android:id="@+id/vinylProfileFragment"
            android:name="org.ciaranroche.kang.fragments.main.HomeFragment"
            android:label="Kang"
            tools:layout="@layout/fragment_vinyl_list">
        <action
                android:id="@+id/action_vinylProfileFragment_to_add_vinyl"
                app:destination="@id/add_vinyl"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        <action
                android:id="@+id/action_vinylProfileFragment_to_vinylMoreFragment"
                app:destination="@id/vinylMoreFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        <action
                android:id="@+id/action_vinylProfileFragment_to_noVinylFragment"
                app:destination="@id/noVinylFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
            android:id="@+id/add_vinyl"
            android:name="org.ciaranroche.kang.fragments.main.AddVinylFragment"
            android:label="@string/add_vinyl"
            tools:layout="@layout/fragment_add_vinyl">
        <argument
                android:name="flowStepNumber"
                app:argType="integer"
                android:defaultValue="1"/>
        <action
                android:id="@+id/action_add_vinyl_to_thankYouFragment"
                app:destination="@id/thankYouFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>

    </fragment>

    <fragment
            android:id="@+id/settings_dest"
            android:name="org.ciaranroche.kang.fragments.main.SettingsFragment"
            android:label="@string/settings"
            tools:layout="@layout/fragment_settings" >
        <action
                android:id="@+id/action_settings_dest_to_userProfileFragment"
                app:destination="@id/userProfileFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        <action
                android:id="@+id/action_settings_dest_to_welcomeFragment"
                app:destination="@id/welcomeFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>


    <fragment
            android:id="@+id/thankYouFragment"
            android:name="org.ciaranroche.kang.fragments.main.ThankYouFragment"
            android:label="Thank You"
            tools:layout="@layout/fragment_thank_you">
        <action
                android:id="@+id/action_thankYouFragment_to_welcomeFragment"
                app:destination="@id/welcomeFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
            android:id="@+id/vinylMoreFragment"
            android:name="org.ciaranroche.kang.fragments.main.VinylMoreFragment"
            android:label="About Vinyl"
            tools:layout="@layout/fragment_vinyl_more">
        <action
                android:id="@+id/action_vinylMoreFragment_to_thankYouFragment"
                app:destination="@id/thankYouFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
            android:id="@+id/noVinylFragment"
            android:name="org.ciaranroche.kang.fragments.main.NoVinylFragment"
            android:label="No Vinyl"
            tools:layout="@layout/fragment_no_vinyl">
        <action
                android:id="@+id/action_noVinylFragment_to_add_vinyl"
                app:destination="@id/add_vinyl"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
            android:id="@+id/logOutFragment"
            android:name="org.ciaranroche.kang.fragments.main.LogOutFragment"
            android:label="Log Out"
            tools:layout="@layout/fragment_log_out">
        <action
                android:id="@+id/action_logOutFragment_to_welcomeFragment"
                app:destination="@id/welcomeFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
            android:id="@+id/userProfileFragment"
            android:name="org.ciaranroche.kang.fragments.main.UserProfileFragment"
            android:label="Profile"
            tools:layout="@layout/fragment_user_profile">
        <action
                android:id="@+id/action_userProfileFragment_to_settings_dest"
                app:destination="@id/settings_dest"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
        <action
                android:id="@+id/action_userProfileFragment_to_vinylProfileFragment"
                app:destination="@id/vinylProfileFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
            android:id="@+id/chatFragment"
            android:name="org.ciaranroche.kang.fragments.main.ChatFragment"
            android:label="Kang Chat"
            tools:layout="@layout/fragment_chat"/>
</navigation>